fix: prevent body overflow in dark mode

--- a/client/app/app.css
+++ b/client/app/app.css
@@ -15,6 +15,7 @@ body {
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
   }
+  overflow: hidden;
 }
 
 :root {
